# libtorch_cv_infer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  predict  predict.cpp  predict_dir.cpp  setup.sh
